tests/typing/fail/copy_self_fail.rb

class Object
  ##% copy<self>: () -> self
  def copy() self end
end

3.copy + "hi"
"hi".copy - 3
